--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -21,8 +21,8 @@
         state: present
     - name: Start the container
       docker_container:
-        name: hariapp
-        image: "kammana/hariapp:{{DOCKER_TAG}}"
+        name: xyz_ltd
+        image: "rjedgemon/xyz_ltd:{{DOCKER_TAG}}"
         state: started
         published_ports:
           - 0.0.0.0:8080:8080
