--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>in.javahome</groupId>
-  <artifactId>dockeransible</artifactId>
+  <artifactId>xyz_ltd</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>dockeransible Maven Webapp</name>
+  <name>XYZ_LTD</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
